# expense-tracker

./: .gitignore  LICENSE  Makefile  README.md  categories.toml  config.toml  config.toml.example  pyproject.toml  rules.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
scripts/: dl_h1_elevations.sh  migrate_v2_patterns.py
src/expense_tracker/: __init__.py  categorizer.py  cli.py  config.py  export.py  llm.py  models.py  pipeline.py  recurring.py  sheets.py
src/expense_tracker/download/: __init__.py  base.py  capital_one.py  chase.py  elevations.py
src/expense_tracker/enrichment/: __init__.py  amazon.py  cache.py  target.py  venmo.py
src/expense_tracker/parsers/: __init__.py  capital_one.py  chase.py  elevations.py
tests/: conftest.py  test_categorizer.py  test_cli.py  test_config.py  test_enrichment_amazon.py  test_enrichment_target.py  test_export.py  test_integration.py  test_llm.py  test_models.py  test_parsers.py  test_pipeline.py
tests/fixtures/: capital_one_empty.csv  capital_one_malformed.csv  capital_one_sample.csv  capital_one_valid.csv  capital_one_wrong_format.csv  chase_all_malformed.csv  chase_empty.csv  chase_malformed.csv  chase_sample.csv  chase_valid.csv  chase_wrong_format.csv  elevations_empty.csv  elevations_malformed.csv  elevations_sample.csv  elevations_valid.csv  elevations_wrong_format.csv
tests/fixtures/config/: categories.toml  config.toml  rules.toml
