[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker"
version = "0.1.0"
description = "CLI tool for multi-account household expense tracking and categorization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lavie Tobey" },
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "playwright>=1.40",
    "tomli-w>=1.0",
]

[project.scripts]
expense = "expense_tracker.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]
enrichment = [
    "playwright>=1.40",
]

# -- Tool configuration --

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.setuptools.packages.find]
where = ["src"]
